src/test/deca/context/invalid/test_error_3.8-2.deca
// Description:
//    Programme soulevant l'erreur (3.8)
// Resultats:
//    Erreur contextuelle
//    Ligne 10 : Les types "int" et "boolean" sont incompatibles pour l'affectation (règle 3.8)
//
// Historique:
//    cree le 12/01/2022

{
	int x = true;
}
